--- a/berhasil.html
+++ b/berhasil.html
@@ -128,7 +128,7 @@
 
   <script>
     setTimeout(function() {
-      window.location.href = 'assets/index.html'; 
+      window.location.href = 'www.panjinugroho.my.id'; 
     }, 5000); // Redirect after 5 seconds
   </script>
 </body>
